guide z-index fix

--- a/src/components/main/PublishIntegrationButton/PublishIntegrationButton.module.scss
+++ b/src/components/main/PublishIntegrationButton/PublishIntegrationButton.module.scss
@@ -9,7 +9,7 @@
   right: 15px;
   bottom: calc(90px + 15px); // 80px - footer height, 15px - padding from footer
   left: 15px;
-  z-index: 5;
+  z-index: 11115;
 
   touch-action: none; /* Prevents all touch actions */
   user-select: none; /* Prevents text selection */
